# job-reccommendetion

./: README.md  SETUP.md
Generative-AI-Powered-Job-Recommender-System-main/Generative-AI-Powered-Job-Recommender-System-main/: .env.example  README_API.md  api_server.py  app.py  pyproject.toml  requirements.txt
Generative-AI-Powered-Job-Recommender-System-main/Generative-AI-Powered-Job-Recommender-System-main/src/: helper.py  job_api.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: AnalysisResults.tsx  JobList.tsx  UploadResume.tsx
frontend/src/services/: api.ts
