[project]
name = "job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "feedparser>=6.0.11",
    "mcp[cli]>=1.9.2",
    "pymupdf>=1.26.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "uvicorn[standard]>=0.32.0",
]
